--- a/index.html
+++ b/index.html
@@ -213,7 +213,39 @@
                     <span class="toggle-icon">▼</span>
                 </div>
                 <div class="section-content">
-                    <div lang="en">My undergraduate experience is temporarily presented in Chinese....</div>
+                    <div lang="en">
+                        I am currently pursuing a Bachelor's degree in Artificial Intelligence at Shaanxi University of Science and Technology. 
+                        When I first entered university, I was deeply committed to academic research in the field of artificial intelligence, 
+                        despite having little prior knowledge of it. 
+                        During my freshman year, I engaged in various student affairs, organized and took responsibility for numerous activities, 
+                        and subscribed to various informational sources, 
+                        gradually gaining an understanding of the extensive applications of artificial intelligence in the world.<br>
+            
+                        In my sophomore year, I joined a laboratory in my spare time to explore deep learning and related topics, 
+                        with the goal of publishing academic papers. 
+                        However, as I delved deeper into the field, 
+                        I realized that the purpose of academic research is not merely to meet external evaluation systems or to produce papers. 
+                        This led me to reconsider my approach. In my junior year, 
+                        I left the laboratory and joined a new research group (currently confidential), 
+                        where I aim to reconnect with the true purpose of scientific research: 
+                        to deeply understand the challenges within the field, focus on learning fundamental knowledge, 
+                        and propose innovative and practical solutions to address gaps in the discipline.<br>
+
+                        I no longer see academic success in terms of accumulating papers or migrating methods from other fields for the sake of results. 
+                        Instead, I believe that genuine progress lies in thoughtful problem-solving and application, 
+                        rather than in merely discovering and addressing problems for the sake of publication. 
+                        Reflecting on why I couldn't adopt this mindset earlier, 
+                        I recognize that I was often driven by external evaluation systems, 
+                        where publishing papers was seen as a means to enhance my resume and advance to higher levels.<br>
+
+                        Now, I no longer prioritize these external measures of success. 
+                        I have come to realize that there are people who appreciate and support me, 
+                        even without these formal achievements. 
+                        All I need to do is cherish their support and continue learning at my own pace. 
+                        There is no requirement to produce papers or meet arbitrary expectations. 
+                        It's perfectly fine if I don't reach certain milestones. 
+                        Imperfect individuals deserve love, 
+                        and those who may not be considered "exceptional" still deserve to live a meaningful and fulfilling life.</div>
                     <div lang="zh">
                       <div id="bachelor-student" class="section">
                           <div class="section-header" onclick="toggleSection(this)">
