--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
                     <span class="toggle-icon">▼</span>
                 </div>
                 <div class="section-content">
-                    <div lang="en">This is a wilderness without knowledge...</div>
+                    <div lang="en">No papers published yet.</div>
                     <div lang="zh">暂无相关发表...</div>
                 </div>
             </div>
