--- a/news.html
+++ b/news.html
@@ -1,6 +1,14 @@
 <div class="iframe-container">
     <h2 style="text-align: center">---News---</h2>
+<!--         <p>============置顶==========</p>
+        <p>=                        =</p>
+        <p>=                        =</p>
+        <p>=                        =</p>
+        <p>==========================</p> -->
+        <p>2024.11.05: [小事] 美味的炸鸡膜！</p>
         <p>2024.11.04: [小事] 网站正式更新一版，好久没更新了。</p>
+        <p>2024.11.03: [小事] 怎么周天就不开心啦。</p>
+        <p>2024.11.02: [小事] 周六请不要想昨天的事情。</p>
         <p>2024.11.01: [小事] 收到我哥的红包了，还是很开心的。</p>
         <p>2024.10.31: [小事] 想起七年前的不开心的事情了哈哈。</p>
         <p>2024.10.30: [小事] 为简单庆祝某事，吃了纸包鱼，好久没吃了。</p>
@@ -9,6 +17,7 @@
         <p>2024.10.27: [小事] 久违地吃了泡面。</p>
         <p>2024.10.24: [小事] 一件开心的事情哈哈。</p>
         <p>2024.10.23: [动漫] 桐人亚丝娜新婚快乐！</p>
+        <p>2024.10.22: [小事] 希望遇见一个人，见知乎收藏question/772726479/answer/4884350049。</p>
         <p>2024.10.14: [谢谢] 谢谢姚老师指点。</p>
         <p>2024.10.08: [小事] 不开心，然后聊了会天哈哈。</p>
         <p>2024.10.04: [小事] U盘坏了，但客服说可以退90%的钱，用了一年多了。</p>
