--- a/index.html
+++ b/index.html
@@ -438,7 +438,7 @@
                         <p>2024.10.27: [小事] 久违地吃了泡面。</p>
                         <p>2024.10.24: [小事] 一件开心的事情哈哈。</p>
                         <p>2024.10.23: [动漫] 桐人亚丝娜新婚快乐！</p>
-                        <p>2024.10.22: [小事] 希望遇见一个人，见知乎收藏question/772726479/answer/4884350049。</p>
+                        <p>2024.10.22: [小事] 见知乎收藏question/772726479/answer/4884350049。</p>
                         <p>2024.10.14: [谢谢] 谢谢姚老师指点。</p>
                         <p>2024.10.08: [小事] 不开心，然后聊了会天哈哈。</p>
                         <p>2024.10.04: [小事] U盘坏了，但客服说可以退90%的钱，用了一年多了。</p>
