--- a/index.html
+++ b/index.html
@@ -146,6 +146,8 @@
                         </div>
                         <div class="section-content">
                             <div lang="zh">首字母排序:</div>
+                            <p lang='zh'>截止 2024.11.04:</p>
+                            <p lang='en'>Until 2024.11.04:</p>
                             <p>An, Bai, Bai, Bai, Bai, Cao, Cao, Zeng, Cai, Chang, Chao, Chao, Chen, Chen, Chen, Chen, Cheng, Cheng, Cheng, Cui, Cui, Dai, Dai, Shan, Dan, Dang, Deng, Di, Ding, Du, Du, Du, Duan, Duan, Fan, Fan, Fan, Fang, Fang, Fang, Feng, Feng, Feng, Feng, Fu, Fu, Gao, Gao, Gao, Geng, Guan, Gui, Guo, Guo, Guo, Guo, Guo, Han, Han, He, He, Hong, Hong, Hu, Hu, Hu, Huang, Huang, Huang, Jia, Jia, Jiang, Jin, Ju, Kang, Kang, Ke, Kong, Lei, Lei, Lei, Lei, Li, Li, Li, Li, Li, Li, Li, Li, Li, Li, Li, Li, Li, Li, Li, Li, Li, Li, Li, Li, Li, Li, Li, Li, Liang, Liang, Lin, Lin, Lin, Lin, Liu, Liu, Liu, Liu, Liu, Liu, Liu, Liu, Liu, Liu, Liu, Liu, Liu, Liu, Liu, Liu, Liu, Liu, Liu, Liu, Liu, Liu, Liu, Liu, Lu, Lu, Lu, Ma, Ma, Ma, Ma, Ma, Meng, Meng, Mu, Nan, Ning, Pei, Peng, Qi, Qi, Qian, Qiao, Qiao, Qin, Qiu, Quan, Ren, Ren, Ren, Shi, Shuai, Song, Sun, Mon, Tue, Tang, Tao, Tian, Tian, Tian, Tian, Tong, Tong, Tong, Wang, Wang, Wang, Wang, Wang, Wang, Wang, Wang, Wang, Wang, Wang, Wang, Wang, Wang, Wang, Wang, Wang, Wang, Wang, Wang, Wang, Wang, Wang, Wang, Wang, Wang, Wang, Wang, Wang, Wang, Wang, Wang, Wang, Wang, Wang, Wang, Wang, Wei, Wei, Wen, Wu, Wu, Wu, Xiang, Xiang, Xiao, Xiao, Xiao, Xiao, Xiao, Xiao, Xie, Xie, Xie, Xie, Xin, Xiong, Xu, Xu, Xu, Xue, Xue, Xue, Xue, Yan, Yang, Yang, Yang, Yang, Yang, Yang, Yang, Yang, Yao, Yao, Yin, Yu, Yu, Yu, Yu, Yu, Yu, Yuan, Zhan, Zhang, Zhang, Zhang, Zhang, Zhang, Zhang, Zhang, Zhang, Zhang, Zhang, Zhang, Zhang, Zhang, Zhang, Zhang, Zhang, Zhang, Zhang, Zhang, Zhang, Zhang, Zhang, Zhang, Zhang, Zhang, Zhang, Zhang, Zhangsun, Zhao, Zhao, Zhao, Zheng, Zhou, Zhou, Zhou, Zhou, etc.</p>
                         </div>
                     </div>
@@ -426,7 +428,6 @@
                       For the English news section, focus on writing content that is both significant and formal.
                     </div>
                     <div lang="zh">
-                        <p>2024.11.05: [小事] 美味的炸鸡膜！</p>
                         <p>2024.11.04: [小事] 网站正式更新一版，好久没更新了。</p>
                         <p>2024.11.03: [小事] 怎么周天就不开心啦。</p>
                         <p>2024.11.02: [小事] 周六请不要想昨天的事情。</p>
@@ -438,7 +439,6 @@
                         <p>2024.10.27: [小事] 久违地吃了泡面。</p>
                         <p>2024.10.24: [小事] 一件开心的事情哈哈。</p>
                         <p>2024.10.23: [动漫] 桐人亚丝娜新婚快乐！</p>
-                        <p>2024.10.22: [小事] 见知乎收藏question/772726479/answer/4884350049。</p>
                         <p>2024.10.14: [谢谢] 谢谢姚老师指点。</p>
                         <p>2024.10.08: [小事] 不开心，然后聊了会天哈哈。</p>
                         <p>2024.10.04: [小事] U盘坏了，但客服说可以退90%的钱，用了一年多了。</p>
