--- a/news.html
+++ b/news.html
@@ -5,6 +5,7 @@
         <p>=                        =</p>
         <p>=                        =</p>
         <p>==========================</p> -->
+        <p>2024.11.08: [小事] 蓝蓝更新啦。</p>
         <p>2024.11.07: [小事] 和好多人聊天了。</p>
         <p>2024.11.04: [小事] 网站正式更新一版，好久没更新了。</p>
         <p>2024.11.03: [小事] 怎么周天就不开心啦。</p>
