--- a/index.html
+++ b/index.html
@@ -428,6 +428,9 @@
                       For the English news section, focus on writing content that is both significant and formal.
                     </div>
                     <div lang="zh">
+                        <p>2024.11.15: [小事] 每次周末就不开心。</p>
+                        <p>2024.11.11: [谢谢] 谢谢欧师兄指点。</p>
+                        <p>2024.11.09: [聚餐] 不开心的话，那就简单吃个鸡公煲吧。</p>
                         <p>2024.11.08: [小事] 蓝蓝更新啦。蓝蓝没有你我怎么活啊[大哭]</p>
                         <p>2024.11.07: [小事] 今天和好多人聊天了。</p>
                         <p>2024.11.04: [小事] 网站正式更新一版，好久没更新了。</p>
