--- a/index.html
+++ b/index.html
@@ -428,7 +428,7 @@
                       For the English news section, focus on writing content that is both significant and formal.
                     </div>
                     <div lang="zh">
-                        <p>2024.11.15: [小事] 每次周末就不开心。</p>
+<!--                         <p>2024.11.15: [小事] 每次周末就不开心。</p>
                         <p>2024.11.11: [谢谢] 谢谢欧师兄指点。</p>
                         <p>2024.11.09: [聚餐] 不开心的话，那就简单吃个鸡公煲吧。</p>
                         <p>2024.11.08: [小事] 蓝蓝更新啦。蓝蓝没有你我怎么活啊[大哭]</p>
@@ -511,7 +511,7 @@
                         <p>2022.09.18: [小事] 大学开学了。</p>
                         <p>2022.08.03: [小事] 第一次一个人去湖南省图书馆。</p>
                         <p>2022.07.23: [小事] 第一次和我哥在胡桃里吃饭。</p>
-                        <p>2022.07.08: [电影] 关于我哥十年前送我的笔记本还能开机并看《你的名字》这件事！</p>
+                        <p>2022.07.08: [电影] 关于我哥十年前送我的笔记本还能开机并看《你的名字》这件事！</p> -->
                     </div>
                 </div>
             </div>
@@ -554,6 +554,10 @@
                       <p>
                       <a href="https://orcid.org/0009-0003-5303-1855" target="_blank">
                           <img src="https://orcid.org/sites/default/files/images/orcid_16x16.png" alt="ORCID Logo" style="width: 20px; height: 20px;"></a>
+                      <a href="https://scholar.google.com/citations?hl=en&user=6iHsIYMAAAAJ" target="_blank">
+                          <img src="https://scholar.google.com/favicon.ico" alt="Google Scholar Logo" style="width: 20px; height: 20px;"></a>
+                      <a href="https://arxiv.org/a/lei_z_1" target="_blank">
+                          <img src="https://static.arxiv.org/static/browse/0.3.4/images/icons/favicon.ico" alt="arXiv Logo" style="width: 20px; height: 20px;"></a>
                       <a href="https://github.com/LeiZheng2005" target="_blank">
                           <img src="https://github.githubassets.com/images/modules/logos_page/GitHub-Mark.png" alt="GitHub Logo" style="width: 20px; height: 20px;"></a>
                       <a href="https://www.luogu.com.cn/user/1193345" target="_blank">
