--- a/index.html
+++ b/index.html
@@ -196,13 +196,14 @@
                 <div class="section-header" onclick="toggleSection(this)">
                     <h2>
                         <span lang="en">Publications</span>
-                        <span lang="zh">发表</span>
+                        <span lang="zh">出版</span>
                     </h2>
                     <span class="toggle-icon">▼</span>
                 </div>
                 <div class="section-content">
-                    <div lang="en">pass</div>
-                    <div lang="zh">pass</div>
+                    <div>
+                        2025.03: VLA Model-Expert Collaboration for Bi-directional Manipulation Learning. Tian-Yu Xiang; Ao-Qun Jin; Xiao-Hu Zhou*; Mei-Jiang Gui; Xiao-Liang Xie; Shi-Qi Liu; Shuang-Yi Wang; Sheng-Bin Duang; Si-Cheng Wang; <b>Zheng Lei</b>; Zeng-Guang Hou*. <a href="https://doi.org/10.48550/arxiv.2503.04163">[doi]</a> <a href="https://arxiv.org/abs/2503.04163">[url]</a> <a href="pdfs/2503.04163v1.pdf">[pdf]</a> <a href="https://aoqunjin.github.io/Expert-VLA/">[code]</a>
+                    </div>
                 </div>
             </div>
 
@@ -362,8 +363,9 @@
                                 <span class="toggle-icon">▼</span>
                           </div>
                           <div class="section-content">
-                              <p class='zh'>2023.10-2024.05: 陕西省人工智能联合实验室陕西科技大学实验室</p>
-                              <p class='zh'>2024.07-2024.09: 陕西科技大学水下目标检测实验室</p>
+                              <p class='zh'>2023.10-2024.05: 陕西省人工智能联合实验室-陕西科技大学人工智能与机器视觉实验室 <a href="https://aimven.sust.edu.cn/index.htm">[url]</a> </p>
+                              <p class='zh'>2024.07-2024.09: 陕西科技大学复杂环境信息智能感知团队 <a href="http://dianzhi.www.sust.edu.cn/kxyj1/kytd.htm">[url]</a> </p>
+<!--                              <p class="zh">2024.11-2026.06: 中国科学院自动化研究所-多模态人工智能系统全国重点实验室-医疗工程与机器人技术研究组(HEART) <a href="https://people.ucas.edu.cn/~xhz">[url]</a> </p>-->
                           </div>
                       </div>
 
