--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
                 </div>
                 <div class="section-content">
                     <div>
-                        2025.03: VLA Model-Expert Collaboration for Bi-directional Manipulation Learning. Tian-Yu Xiang; Ao-Qun Jin; Xiao-Hu Zhou*; Mei-Jiang Gui; Xiao-Liang Xie; Shi-Qi Liu; Shuang-Yi Wang; Sheng-Bin Duang; Si-Cheng Wang; <b>Zheng Lei</b>; Zeng-Guang Hou*. <a href="https://doi.org/10.48550/arxiv.2503.04163">[doi]</a> <a href="https://arxiv.org/abs/2503.04163">[url]</a> <a href="pdfs/2503.04163v1.pdf">[pdf]</a> <a href="https://aoqunjin.github.io/Expert-VLA/">[code]</a>
+                        2025.03: VLA Model-Expert Collaboration for Bi-directional Manipulation Learning. (2025 Arxiv) Tian-Yu Xiang; Ao-Qun Jin; Xiao-Hu Zhou*; Mei-Jiang Gui; Xiao-Liang Xie; Shi-Qi Liu; Shuang-Yi Wang; Sheng-Bin Duang; Si-Cheng Wang; <b>Zheng Lei</b>; Zeng-Guang Hou*. <a href="https://doi.org/10.48550/arxiv.2503.04163">[doi]</a> <a href="https://arxiv.org/abs/2503.04163">[url]</a> <a href="pdfs/2503.04163v1.pdf">[pdf]</a> <a href="https://aoqunjin.github.io/Expert-VLA/">[code]</a>
                     </div>
                 </div>
             </div>
