--- a/index.html
+++ b/index.html
@@ -96,25 +96,18 @@
                     <span lang="zh">雷政</span>
                 </h1>
                 <p>
-                    <span lang="en">2005</span>
-                    <span lang="zh">2005</span>
+                    <span lang="en">Beijing, China</span>
+                    <span lang="zh">北京，中国</span>
                 </p>
                 <p>
-                    <span lang="en">Xi'an, China</span>
-                    <span lang="zh">西安，中国</span>
+                    <span lang="en">Institute of Automation, Chinese Academy of Sciences </span>
+                    <span lang="zh">中国科学院自动化研究所 </span>
                 </p>
                 <p>
-                    <span lang="en">Shaanxi University of Science and Technology</span>
-                    <span lang="zh">陕西科技大学</span>
+                    <span lang="en">Intern in Brain-inspired computing </span>
+                    <span lang="zh">类脑计算-实习生</span>
                 </p>
-                <p>
-                    <span lang="en">Artificial Intelligence</span>
-                    <span lang="zh">人工智能专业</span>
-                </p>
-                <p>
-                    <span lang="en">Undergraduate Student</span>
-                    <span lang="zh">本科生</span>
-                </p>
+
             </div>
         </div>
 
@@ -132,10 +125,26 @@
                 </div>
                 <div class="section-content">
                     <div lang="en">
-                    pass
+                        <h3>Education:</h3>
+                            <ul style="padding-left: 40px;">
+                                <p> 2024.10-2026.06: Intern in Brain-Inspired Computing, Institute of Automation, Chinese Academy of Sciences <a href="https://www.ia.cas.cn/">[url]</a> </p>
+                                <p> 2022.09-2026.06: B.S. in Artificial Intelligence, School of Electronic Information and Artificial Intelligence, Shaanxi University of Science and Technology <a href="https://www.sust.edu.cn/">[url]</a> </p>
+                            </ul>
+                        <h3>Work Experience:</h3>
+                            <ul style="padding-left: 40px;">
+                                <p> 2022.09-2026.06: Intern in Brain-Inspired Computing, Institute of Automation, Chinese Academy of Sciences <a href="https://www.ia.cas.cn/">[url]</a> </p>
+                            </ul>
                     </div>
                     <div lang="zh">
-                        pass
+                        <h3>教育经历:</h3>
+                            <ul style="padding-left: 40px;">
+                                <p> 2024.10-2026.06: 中国科学院-自动化研究所-多模态人工智能系统全国重点实验室-医疗工程与机器人技术研究组(HEART)-类脑计算方向-实习生 <a href="https://people.ucas.edu.cn/~xhz">[url]</a> </p>
+                                <p> 2022.09-2026.06: 陕西科技大学-电子信息与人工智能学院-人工智能专业-学士 <a href="https://www.sust.edu.cn/">[url]</a> </p>
+                            </ul>
+                        <h3>工作经历:</h3>
+                            <ul style="padding-left: 40px;">
+                                <p> 2024.10-2026.06: 中国科学院-自动化研究所-多模态人工智能系统全国重点实验室-医疗工程与机器人技术研究组(HEART)-类脑计算方向-实习生 <a href="https://people.ucas.edu.cn/~xhz">[url]</a> </p>
+                            </ul>
                     </div>
 
                     <div id="thanks" class="section">
@@ -202,7 +211,7 @@
                 </div>
                 <div class="section-content">
                     <div>
-                        2025.03: VLA Model-Expert Collaboration for Bi-directional Manipulation Learning. (2025 Arxiv) Tian-Yu Xiang; Ao-Qun Jin; Xiao-Hu Zhou*; Mei-Jiang Gui; Xiao-Liang Xie; Shi-Qi Liu; Shuang-Yi Wang; Sheng-Bin Duang; Si-Cheng Wang; <b>Zheng Lei</b>; Zeng-Guang Hou*. <a href="https://doi.org/10.48550/arxiv.2503.04163">[doi]</a> <a href="https://arxiv.org/abs/2503.04163">[url]</a> <a href="pdfs/2503.04163v1.pdf">[pdf]</a> <a href="https://aoqunjin.github.io/Expert-VLA/">[code]</a>
+                        <p> 2025.03: VLA Model-Expert Collaboration for Bi-directional Manipulation Learning (2025 arxiv) Tian-Yu Xiang; Ao-Qun Jin; Xiao-Hu Zhou*; Mei-Jiang Gui; Xiao-Liang Xie; Shi-Qi Liu; Shuang-Yi Wang; Sheng-Bin Duang; Si-Cheng Wang; <b>Zheng Lei</b>; Zeng-Guang Hou*. <a href="https://doi.org/10.48550/arxiv.2503.04163">[doi]</a> <a href="https://arxiv.org/abs/2503.04163">[url]</a> <a href="pdfs/2503.04163v1.pdf">[pdf]</a> <a href="https://aoqunjin.github.io/Expert-VLA/">[code]</a> </p>
                     </div>
                 </div>
             </div>
@@ -232,23 +241,20 @@
                                   <h3 class='zh'>2022-2023学年: </h3>
                                       <p class='zh'>2022.09-2023.07: 电子信息类2202班班长</p>
                                       <p class='zh'>2022.09-2023.07: 校青年志愿者服务团管理部委员
-                                          <a href="https://mp.weixin.qq.com/s/YsmHp_hQqq7CrqRQ70Pteg">
-                                              (公示地址: 管理部序号14)</a></p>
+                                          <a href="https://mp.weixin.qq.com/s/YsmHp_hQqq7CrqRQ70Pteg">[url]</a></p>
                                       <p class='zh'>2023.05-2023.11: 陕西科技大学国际交流与合作处学生助理</p>
                                   <h3 class='zh'>2023-2024学年:</h3>
                                       <p class='zh'>2023.09-2024.07: 学院辅导员助理</p>
                                       <p class='zh'>2024.03-2025.04: 首届校图书馆阅读代言人
-                                          <a href="https://mp.weixin.qq.com/s/1A1xwRbl9gWkQEmYAivg3w">
-                                              (公示地址: 电子信息与人工智能学院)</a></p>
+                                          <a href="https://mp.weixin.qq.com/s/1A1xwRbl9gWkQEmYAivg3w">[url]</a></p>
                                       <p class='zh'>2023.09-2024.07: 电子信息类2301班新生班级助理
-                                          <a href="https://mp.weixin.qq.com/s/Xlux-d6lwkuRdyGFofNNFg">
-                                              (公示地址: 序号1)</a></p>
+                                          <a href="https://mp.weixin.qq.com/s/Xlux-d6lwkuRdyGFofNNFg">[url]</a></p>
                                       <p class='zh'>2023.09-2024.07: 陕西科技大学国际交流社社长</p>
                                       <p class='zh'>2023.09-2024.07: 黑豆计算机协会副会长</p>
                                  <h3 class='zh'>2024-2025学年: </h3>
                                       <p class='zh'>2024.07-2025.07: 学院辅导员助理</p>
                                       <p class='zh'>2024.08-2025.07: 人工智能242班新生班级助理
-                                        <a href='https://mp.weixin.qq.com/s/86XQmeYCVR4HqGvnNQ4RZQ'>(公示地址)</a></p>
+                                        <a href='https://mp.weixin.qq.com/s/86XQmeYCVR4HqGvnNQ4RZQ'>[url]</a></p>
                             </div>
                           </div>
 
@@ -262,37 +268,29 @@
                           <div class="section-content">
                               <h3 class='zh'>国家级: </h3>
                                   <p class='zh'>2023.12: 中国大学生在线悦读青春全国百佳读书达人
-                                      <a href="https://dxs.moe.gov.cn/zx/a/ds/231218/1872012.shtml">(公示名单</a>
-                                      <a href="https://univs-news-1256833609.file.myqcloud.com/123/upload/resources/file/8489833.docx">
-                                      下载地址: 序号68)</a></p>
+                                      <a href="https://dxs.moe.gov.cn/zx/a/ds/231218/1872012.shtml">[url]</a>
+                                      <a href="https://univs-news-1256833609.file.myqcloud.com/123/upload/resources/file/8489833.docx">[docx]</a></p>
                               <h3 class='zh'>省部级: </h3>
                                   <p class='zh'>2023.04: 西安华商报报道采访
-                                      <a href="http://ehsb.hspress.net/shtml/hsb/20230423/958024.shtml" target="_blank">
-                                          (原文地址)</a></p>
+                                      <a href="http://ehsb.hspress.net/shtml/hsb/20230423/958024.shtml" target="_blank">[url]</a></p>
                                   <p class='zh'>2023.05: 陕西省第十三届文明礼仪优秀志愿者
-                                      <a href="https://mp.weixin.qq.com/s/dPASVTtlkAvrj8drvMz8IQ">
-                                          (活动地址：考务办)</a></p>
+                                      <a href="https://mp.weixin.qq.com/s/dPASVTtlkAvrj8drvMz8IQ">[url]</a></p>
                                   <p class='zh'>2023.07: 上海赴外国际组织实习预备营实训证书</p>
                               <h3 class='zh'>校级: </h3>
                                   <p class='zh'>2023.04: 校图书馆年度阅读之星</p>
                                   <p class='zh'>2023.04: 校官微采访
-                                      <a href="https://mp.weixin.qq.com/s/d7LERT5AejW3mXyJE8RSBQ" target="_blank">
-                                          (原文地址)</a></p>
+                                      <a href="https://mp.weixin.qq.com/s/d7LERT5AejW3mXyJE8RSBQ" target="_blank">[url]</a></p>
                                   <p class='zh'>2023.05: 优秀团员</p>
                                   <p class='zh'>2023.06: 校青年志愿者服务团优秀委员</p>
                                   <p class='zh'>2024.03: 校官微采访
-                                      <a href="https://mp.weixin.qq.com/s/m-RiR8QaW6mb4-wNcY9cig" target="_blank">
-                                          (原文地址)</a></p>
+                                      <a href="https://mp.weixin.qq.com/s/m-RiR8QaW6mb4-wNcY9cig" target="_blank">[url]</a></p>
                                   <p class='zh'>2024.04: 校图书馆年度阅读之星</p>
                                   <p class='zh'>2024.05: 校阅读代言人
-                                      <a href="https://mp.weixin.qq.com/s/1A1xwRbl9gWkQEmYAivg3w" target="_blank">
-                                          (原文地址)</a></p>
+                                      <a href="https://mp.weixin.qq.com/s/1A1xwRbl9gWkQEmYAivg3w" target="_blank">[url]</a></p>
                                   <p class='zh'>2024.04: 校优秀学业奖学金一等奖
-                                      <a href="https://dianzhi.www.sust.edu.cn/info/4703/38512.htm" target="_blank">
-                                          (原文地址：序号28)</a></p>
+                                      <a href="https://dianzhi.www.sust.edu.cn/info/4703/38512.htm" target="_blank">[url]</a></p>
                                   <p class='zh'>2024.04: 校优秀学生干部奖学金
-                                      <a href="https://dianzhi.www.sust.edu.cn/info/4703/38512.htm" target="_blank">
-                                          (原文地址：序号366)</a></p>
+                                      <a href="https://dianzhi.www.sust.edu.cn/info/4703/38512.htm" target="_blank">[url]</a></p>
                                   <p class='zh'>2024.04: 校三好学生</p>
                           </div>
                       </div>
@@ -307,10 +305,8 @@
                           <div class="section-content">
                               <h3 class='zh'>国家级: </h3>
                                   <p class='zh'>2024.06: 第十五届蓝桥杯软件赛Python组国家三等奖
-                                      <a href="https://dasai.lanqiao.cn/notices/1636">
-                                          (公示地址</a>
-                                      <a href="https://x-static.lanqiao.cn/upload/202406/courseimg/b5c3e9cc-0ec5-4a3d-a89a-0637b950423e.rar">
-                                          下载地址)</a>
+                                      <a href="https://dasai.lanqiao.cn/notices/1636">[url]</a>
+                                      <a href="https://x-static.lanqiao.cn/upload/202406/courseimg/b5c3e9cc-0ec5-4a3d-a89a-0637b950423e.rar">[rar]</a>
                                   </p>
                               <h3 class='zh'>省部级: </h3>
                                   <p class='zh'>2022.12: 全国大学生英语翻译大赛省级一等奖</p>
@@ -319,36 +315,24 @@
                                   <p class='zh'>2023.11: 第十五届大学生高等数学竞赛省级参与奖</p>
                                   <p class='zh'>2023.12: 第十四届全国周培源大学生力学竞赛(陕西赛区)三等奖</p>
                                   <p class='zh'>2024.04: 第十五届蓝桥杯软件赛Python组省级一等奖
-                                      <a href="https://dasai.lanqiao.cn/notices/1615">
-                                          (公示地址</a>
-                                      <a href="https://x-static.lanqiao.cn/upload/202404/courseimg/2d1afdd4-e563-4394-9875-d52e1a7a3994.rar">
-                                        下载地址)</a></p>
+                                      <a href="https://dasai.lanqiao.cn/notices/1615">[url]</a>
+                                      <a href="https://x-static.lanqiao.cn/upload/202404/courseimg/2d1afdd4-e563-4394-9875-d52e1a7a3994.rar">[rar]</a></p>
                                   <p class='zh'>2024.04: 团体程序设计天梯赛省级三等奖</p>
                                   <p class='zh'>2024.06: 第十七届全国大学生计算机设计大赛省级三等奖</p>
                                   <p class='zh'>2024.07: 第十二届全国大学生光电设计竞赛西北赛区二等奖
-                                      <a href="https://gdxbsq.moocollege.com/datacenter/news/detail?id=7932">
-                                          (公示地址</a>,
-                                      <a href="https://oss.moocollege.com/24334/edit/JNVH8OKq_1721641614293.pdf">
-                                          下载地址: 序号80)</a></p>
+                                      <a href="https://gdxbsq.moocollege.com/datacenter/news/detail?id=7932">[url]</a>
+                                      <a href="https://oss.moocollege.com/24334/edit/JNVH8OKq_1721641614293.pdf">[pdf]</a></p>
                                   <p class='zh'>2024.07: 中国高校计算机大赛-大数据挑战赛
-                                      <a href="https://www.heywhale.com/org/bdc/competition/area/6662bf9a8d6c97c5d0c6bb10/leaderboard">
-                                          初赛A榜150/461</a>,
-                                      <a href="https://www.heywhale.com/org/bdc/competition/area/6662bf9a8d6c97c5d0c6bb10/leaderboard">
-                                          初赛B榜147/230</a></p>
+                                      <a href="https://www.heywhale.com/org/bdc/competition/area/6662bf9a8d6c97c5d0c6bb10/leaderboard">[url-a]</a>
+                                      <a href="https://www.heywhale.com/org/bdc/competition/area/6662bf9a8d6c97c5d0c6bb10/leaderboard">[url-b]</a></p>
                               <h3 class='zh'>校级:</h3>
                                   <p class='zh'>2023.04: 全国大学生英语竞赛初赛参与奖</p>
                                   <p class='zh'>2023.06: 第十七届大学生高等数学竞赛校级一等奖</p>
                                   <p class='zh'>2023.12: 毛概视频社会实践校级展示最佳创意奖</p>
                                   <p class='zh'>2024.04: 第十四届正大杯校级优秀奖
-                                      <a href="https://jg.sust.edu.cn/info/1011/9532.htm">
-                                          (公示地址</a>,
-                                      <a href="https://jg.sust.edu.cn/system/_content/download.jsp?urltype=news.DownloadAttachUrl&owner=1685613331&wbfileid=6DAA5A2541CF06312809A622052485B1">
-                                          下载地址)</a></p>
+                                      <a href="https://jg.sust.edu.cn/info/1011/9532.htm">[url]</a></p>
                                   <p class='zh'>2024.04: 第十四届三创赛校级参与奖
-                                      <a href="https://jg.sust.edu.cn/info/1011/9722.htm">
-                                          (公示地址</a>,
-                                      <a href="https://jg.sust.edu.cn/system/_content/download.jsp?urltype=news.DownloadAttachUrl&owner=1685613331&wbfileid=1AE6F6DE312A58FAF23DD6A468986566">
-                                          下载地址)</a></p>
+                                      <a href="https://jg.sust.edu.cn/info/1011/9722.htm">[url]</a>
                                   <p class='zh'>2024.04: 第十四届复兴赛校级参与奖</p>
                                   <p class='zh'>2024.04: 大学生创新创业院级参与奖</p>
                                   <p class='zh'>2024.04: 全国大学生英语竞赛初赛参与奖</p>
@@ -363,9 +347,9 @@
                                 <span class="toggle-icon">▼</span>
                           </div>
                           <div class="section-content">
-                              <p class='zh'>2023.10-2024.05: 陕西省人工智能联合实验室-陕西科技大学人工智能与机器视觉实验室 <a href="https://aimven.sust.edu.cn/index.htm">[url]</a> </p>
-                              <p class='zh'>2024.07-2024.09: 陕西科技大学复杂环境信息智能感知团队 <a href="http://dianzhi.www.sust.edu.cn/kxyj1/kytd.htm">[url]</a> </p>
-<!--                              <p class="zh">2024.11-2026.06: 中国科学院自动化研究所-多模态人工智能系统全国重点实验室-医疗工程与机器人技术研究组(HEART) <a href="https://people.ucas.edu.cn/~xhz">[url]</a> </p>-->
+                              <p class='zh'>2023.10-2024.05: 陕西省人工智能联合重点实验室-陕西科技大学人工智能与机器视觉实验室-计算机视觉方向 <a href="https://aimven.sust.edu.cn/index.htm">[url]</a> </p>
+                              <p class='zh'>2024.06-2024.09: 陕西科技大学-复杂环境信息智能感知团队-水下图像增强方向 <a href="http://dianzhi.www.sust.edu.cn/kxyj1/kytd.htm">[url]</a> </p>
+                              <p class="zh">2024.10-2026.06: 中国科学院自动化研究所-多模态人工智能系统全国重点实验室-医疗工程与机器人技术研究组(HEART)-类脑计算方向 <a href="https://people.ucas.edu.cn/~xhz">[url]</a> </p>
                           </div>
                       </div>
 
@@ -378,8 +362,7 @@
                           </div>
                           <div class="section-content">
                               <h3 class='zh'>Skills:</h3>
-                              <p class='zh'>Code: Python,C++,Java,HTML,CSS,Shell</p>
-                              <p class='zh'>Tools: PyCharm, GitHub, PyTorch, Anaconda, Kaggle, Typora</p>
+                              <p class='zh'>Code: Python, HTML, Tex, C++, Java, CSS, Shell</p>
                               <h3 class='zh'>Experience:</h3>
                               <p class='zh'>2023.07: 上海赴外国际组织实习</p>
                           </div>
@@ -418,14 +401,16 @@
                   </div>
                   <div class="section-content">
                       <div lang="en">
-                        <p>Wechat: leizheng1960</p>
-                        <p>Email: leizheng2005@gmail.com</p>
-                        <p>Address: Student Living Area of Shaanxi University of Science and Technology, Weiyanghu Street, Weiyang District, Xi'an, Shaanxi Province, China, 710021</p>
+                         <p>Home page: www.leizheng2005.github.io <a href="https://www.leizheng2005.github.io">[url]</a></p>
+                         <p>Wechat: leizheng1960</p>
+                         <p>Email: leizheng2005@gmail.com</p>
+                         <p>Address: Student Living Area of Shaanxi University of Science and Technology, Weiyanghu Street, Weiyang District, Xi'an, Shaanxi Province, China, 710021</p>
                       </div>
                       <div lang="zh">
-                        <p>微信: leizheng1960</p>
-                        <p>邮箱: leizheng2005@gmail.com</p>
-                        <p>地点: 中国陕西省西安市未央区未央湖街道陕西科技大学学生生活区，710021</p>
+                         <p>Home page: www.leizheng2005.com <a href="https://www.leizheng2005.com">[url]</a></p>
+                         <p>微信: leizheng1960</p>
+                         <p>邮箱: leizheng2005@gmail.com</p>
+                         <p>地点: 中国陕西省西安市未央区未央湖街道陕西科技大学学生生活区，710021</p>
                       </div>
                   </div>
               </div>
@@ -439,6 +424,7 @@
                       </h2>
                       <span class="toggle-icon">▼</span>
                   </div>
+
                   <div class="section-content">
                     <p>
                       <span lang="zh">相关网站:</span>
