--- a/index.html
+++ b/index.html
@@ -146,23 +146,23 @@
                     <div lang="en">
                         <h3>Education:</h3>
                             <ul style="padding-left: 40px;">
-                                <p> 2024.10-2026.06: Intern in Brain-Inspired Computing, Institute of Automation, Chinese Academy of Sciences <a href="https://www.ia.cas.cn/">[url]</a> </p>
+                                <p> 2024.10-2026.06: Intern in Brain-Inspired Computing, Institute of Automation, Chinese Academy of Sciences <a href="http://www.ia.cas.cn/">[url]</a> </p>
                                 <p> 2022.09-2026.06: B.S. in Artificial Intelligence, School of Electronic Information and Artificial Intelligence, Shaanxi University of Science and Technology <a href="https://www.sust.edu.cn/">[url]</a> </p>
                             </ul>
                         <h3>Work Experience:</h3>
                             <ul style="padding-left: 40px;">
-                                <p> 2022.09-2026.06: Intern in Brain-Inspired Computing, Institute of Automation, Chinese Academy of Sciences <a href="https://www.ia.cas.cn/">[url]</a> </p>
+                                <p> 2022.09-2026.06: Intern in Brain-Inspired Computing, Institute of Automation, Chinese Academy of Sciences <a href="http://www.ia.cas.cn/">[url]</a> </p>
                             </ul>
                     </div>
                     <div lang="zh">
                         <h3>教育经历:</h3>
                             <ul style="padding-left: 40px;">
-                                <p> 2024.10-2026.06: 中国科学院-自动化研究所-多模态人工智能系统全国重点实验室-医疗工程与机器人技术研究组(HEART)-类脑计算方向-实习生 <a href="https://people.ucas.edu.cn/~xhz">[url]</a> </p>
+                                <p> 2024.10-2026.06: 中国科学院-自动化研究所-多模态人工智能系统全国重点实验室-医疗工程与机器人技术研究组(HEART)-类脑计算方向-实习生 <a href="http://people.ucas.edu.cn/~xhz">[url]</a> </p>
                                 <p> 2022.09-2026.06: 陕西科技大学-电子信息与人工智能学院-人工智能专业-学士 <a href="https://www.sust.edu.cn/">[url]</a> </p>
                             </ul>
                         <h3>工作经历:</h3>
                             <ul style="padding-left: 40px;">
-                                <p> 2024.10-2026.06: 中国科学院-自动化研究所-多模态人工智能系统全国重点实验室-医疗工程与机器人技术研究组(HEART)-类脑计算方向-实习生 <a href="https://people.ucas.edu.cn/~xhz">[url]</a> </p>
+                                <p> 2024.10-2026.06: 中国科学院-自动化研究所-多模态人工智能系统全国重点实验室-医疗工程与机器人技术研究组(HEART)-类脑计算方向-实习生 <a href="http://people.ucas.edu.cn/~xhz">[url]</a> </p>
                             </ul>
                     </div>
 
@@ -420,13 +420,13 @@
                   </div>
                   <div class="section-content">
                       <div lang="en">
-                         <p>Home page: www.leizheng2005.github.io <a href="https://www.leizheng2005.github.io">[url]</a></p>
+                         <p>Home page: www.leizheng2005.github.io <a href="http://www.leizheng2005.github.io">[url]</a></p>
                          <p>Wechat: leizheng1960</p>
                          <p>Email: leizheng2005@gmail.com</p>
                          <p>Address: Student Living Area of Shaanxi University of Science and Technology, Weiyanghu Street, Weiyang District, Xi'an, Shaanxi Province, China, 710021</p>
                       </div>
                       <div lang="zh">
-                         <p>Home page: www.leizheng2005.com <a href="https://www.leizheng2005.com">[url]</a></p>
+                         <p>Home page: www.leizheng2005.com <a href="http://www.leizheng2005.com">[url]</a></p>
                          <p>微信: leizheng1960</p>
                          <p>邮箱: leizheng2005@gmail.com</p>
                          <p>地点: 中国陕西省西安市未央区未央湖街道陕西科技大学学生生活区，710021</p>
