--- a/index.html
+++ b/index.html
@@ -123,11 +123,6 @@
                    <a href="https://www.linkedin.com/in/leizheng2005" target="_blank">
                         <img src="https://cdn-icons-png.flaticon.com/512/174/174857.png" alt="LinkedIn Logo" style="width: 20px; height: 20px;"></a>
                   
-                    <a href="https://www.zhihu.com/people/leizheng2005" target="_blank">
-                      <img src="https://static.zhihu.com/heifetz/favicon.ico" alt="Zhihu Logo" style="width: 20px; height: 20px;"></a>
-
-                  <a href="https://space.bilibili.com/3493282034223793" target="_blank">
-                      <img src="https://www.bilibili.com/favicon.ico" alt="Bilibili Logo" style="width: 20px; height: 20px;"></a>
                           <br></p>
 
             </div>
@@ -452,28 +447,35 @@
                       <span lang="zh">相关网站:</span>
                       <span lang="en">Websites:</span>
                     </p>
-                <p>
-                  <a href="https://orcid.org/0009-0003-5303-1855" target="_blank">
-                      <img src="https://orcid.org/sites/default/files/images/orcid_16x16.png" alt="ORCID Logo" style="width: 20px; height: 20px;"></a>
+<p>
+  <a href="https://orcid.org/0009-0003-5303-1855" target="_blank">
+    <img src="https://upload.wikimedia.org/wikipedia/commons/0/06/ORCID_iD.svg" alt="ORCID Logo" style="width: 20px; height: 20px;">
+  </a>
 
-                  <a href="https://scholar.google.com/citations?hl=en&user=6iHsIYMAAAAJ" target="_blank">
-                      <img src="https://scholar.google.com/favicon.ico" alt="Google Scholar Logo" style="width: 20px; height: 20px;"></a>
+  <a href="https://scholar.google.com/citations?hl=en&user=6iHsIYMAAAAJ" target="_blank">
+    <img src="https://upload.wikimedia.org/wikipedia/commons/4/4e/Google_Scholar_logo.svg" alt="Google Scholar Logo" style="width: 20px; height: 20px;">
+  </a>
 
-                  <a href="https://arxiv.org/a/lei_z_1" target="_blank">
-                      <img src="https://static.arxiv.org/static/browse/0.3.4/images/icons/favicon.ico" alt="arXiv Logo" style="width: 20px; height: 20px;"></a>
+  <a href="https://arxiv.org/a/lei_z_1" target="_blank">
+    <img src="https://upload.wikimedia.org/wikipedia/commons/9/92/ArXiv_logo.svg" alt="arXiv Logo" style="width: 20px; height: 20px;">
+  </a>
 
-                  <a href="https://github.com/leizheng2005" target="_blank">
-                      <img src="https://github.githubassets.com/images/modules/logos_page/GitHub-Mark.png" alt="GitHub Logo" style="width: 20px; height: 20px;"></a>
+  <a href="https://github.com/leizheng2005" target="_blank">
+    <img src="https://upload.wikimedia.org/wikipedia/commons/9/91/Octicons-mark-github.svg" alt="GitHub Logo" style="width: 20px; height: 20px;">
+  </a>
 
-                   <a href="https://www.linkedin.com/in/leizheng2005" target="_blank">
-                        <img src="https://cdn-icons-png.flaticon.com/512/174/174857.png" alt="LinkedIn Logo" style="width: 20px; height: 20px;"></a>
-                  
-                    <a href="https://www.zhihu.com/people/leizheng2005" target="_blank">
-                      <img src="https://static.zhihu.com/heifetz/favicon.ico" alt="Zhihu Logo" style="width: 20px; height: 20px;"></a>
+  <a href="https://www.linkedin.com/in/leizheng2005" target="_blank">
+    <img src="https://upload.wikimedia.org/wikipedia/commons/0/01/LinkedIn_Logo.svg" alt="LinkedIn Logo" style="width: 20px; height: 20px;">
+  </a>
 
-                  <a href="https://space.bilibili.com/3493282034223793" target="_blank">
-                      <img src="https://www.bilibili.com/favicon.ico" alt="Bilibili Logo" style="width: 20px; height: 20px;"></a>
-                          <br></p>
+  <a href="https://www.zhihu.com/people/leizheng2005" target="_blank">
+    <img src="https://upload.wikimedia.org/wikipedia/commons/d/d7/Zhihu_Logo.svg" alt="Zhihu Logo" style="width: 20px; height: 20px;">
+  </a>
+
+  <a href="https://space.bilibili.com/3493282034223793" target="_blank">
+    <img src="https://upload.wikimedia.org/wikipedia/commons/5/5a/Bilibili_logo.svg" alt="Bilibili Logo" style="width: 20px; height: 20px;">
+  </a>
+</p>
 
 
                     <p>
